package by.zharikov.cleanarchitecturenoteapp.core.utils

object TestTags {

    const val ORDER_SECTION = "ORDER_SECTION"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIElD = "CONTENT_TEXT_FIElD"
    const val NOTE_ITEM = "NOTE_ITEM"
}