...
                    navController.navigate(Screen.AddEditNoteScreen.route)
                },
                backgroundColor = NoteTheme.colors.onBackground
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Add Note",
                    tint = NoteTheme.colors.background
                )
            }
        },
        backgroundColor = NoteTheme.colors.background
    ) {
...
                    }
                }

                IconButton(onClick = { viewModel.onEvent(event = NotesUiEvent.ToggleOrderSection) }) {
                    Icon(
                        imageVector = Icons.Default.List,
                        contentDescription = "Sort",
                        tint = NoteTheme.colors.onBackground
                    )
                }
            }
            AnimatedVisibility(
                visible = state.isOrderSectionVisible,
...
