...
            FloatingActionButton(
                onClick = { viewModel.onEvent(event = AddEditNoteUiEvent.SaveNote) },
                backgroundColor = NoteTheme.colors.onBackground
            ) {
                Icon(
                    imageVector = Icons.Default.Create,
                    contentDescription = "Save note",
                    tint = NoteTheme.colors.background
                )
            }
        },
        scaffoldState = scaffoldState
    ) {
...
